nav alignment fixed

--- a/less/theme.less
+++ b/less/theme.less
@@ -275,7 +275,7 @@ body {
 
     // Flex Item
     .flex-item {
-
+        width: 100%;
         @media @tablet {
             width: 40%;
 
