--- a/less/widgets.less
+++ b/less/widgets.less
@@ -89,7 +89,9 @@
     -webkit-align-items: flex-start;
     -ms-flex-align: start;
     align-items: flex-start;
-    }
+
+    width: 100%;
+}
 
 [data-widget-type="logo"] {
     -webkit-order: 0;
@@ -101,7 +103,7 @@
     -webkit-align-self: center;
     -ms-flex-item-align: center;
     align-self: center;
-    }
+}
 
 [data-widget-type="companyname"] {
     -webkit-order: 1;
@@ -113,7 +115,7 @@
     -webkit-align-self: center;
     -ms-flex-item-align: center;
     align-self: center;
-    }
+}
 
 
 
